# CTRiskSeg

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt
docs/sphinx/: about.rst  conf.py  index.rst  license.rst
examples/: CMakeLists.txt
examples/example_seg/: CMakeLists.txt  example_seg.cpp
include/ctriskseg/: ctriskseg.h  transform.h
src/: transform.cpp
tests/: CMakeLists.txt  resample_test.cpp
tests/python/: resample_data.py
